service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-react
  labels:
    app: sample-react
spec:
  type: ClusterIP
  selector:
    app: sample-react
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
